updated with enemies

--- a/client/index.html
+++ b/client/index.html
@@ -1,16 +1,28 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel='stylesheet' type='css' href='styles.css'>
+    <link rel='stylesheet' href='styles.css'>
+    <style>
+
+    </style>
   </head>
   <body>
+
+<!--     <svg version="1.1" xmlns="http://www.w3.org/2000/svg" height="340" width="340" style="background-color:#F6F7F7;">
+      <circle cx="170" cy="170" r="162" fill="#068C70" />
+    </svg> -->
+
+
+
     <div class="scoreboard">
       <!-- Modify the scoreboard when important events occur in your game! -->
       <div class="highscore">High score: <span>0</span></div>
       <div class="current">Current score: <span>0</span></div>
       <div class="collisions">Collisions: <span>0</span></div>
     </div>
+
     <div class="board"><div class="mouse"></div></div>
+
     <script src="lib/d3.js" charset="utf-8"></script>
     <script src='watchout.js'></script>
   </body>
